Imported Bootstrap 3.3.5 and fixed layout issues with the contact form.

--- a/css/contact.css
+++ b/css/contact.css
@@ -36,7 +36,6 @@
 	width: 85%;
 	min-width: 200px;
 	padding-left: 10px;
-	marin: 0px;
 }
 
 .input-prepend  textarea {
